[gd_scene load_steps=15 format=2]

[ext_resource path="res://Scenes/World.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Chunks/World/World_0x0.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Hero.gd" type="Script" id=3]
[ext_resource path="res://assets/characters/1.png" type="Texture" id=4]
[ext_resource path="res://Scenes/Camera.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6.52497, 2.49794 )

[sub_resource type="Animation" id=2]
resource_name = "down_stand"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "down_walk"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 4, 12 ]
}

[sub_resource type="Animation" id=4]
resource_name = "left_stand"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}

[sub_resource type="Animation" id=5]
resource_name = "left_walk"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 6, 14 ]
}

[sub_resource type="Animation" id=6]
resource_name = "right_stand"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}

[sub_resource type="Animation" id=7]
resource_name = "right_walk"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 7, 15 ]
}

[sub_resource type="Animation" id=8]
resource_name = "up_stand"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="Animation" id=9]
resource_name = "up_walk"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 5, 13 ]
}

[node name="World" type="Node2D"]
script = ExtResource( 1 )

[node name="Chunk0x0" parent="." instance=ExtResource( 2 )]

[node name="Hero" type="KinematicBody2D" parent="Chunk0x0"]
position = Vector2( 10, 20 )
script = ExtResource( 3 )

[node name="Body" type="Sprite" parent="Chunk0x0/Hero"]
position = Vector2( 178.532, 102.138 )
texture = ExtResource( 4 )
vframes = 7
hframes = 4

[node name="Shape" type="CollisionShape2D" parent="Chunk0x0/Hero"]
position = Vector2( 178.383, 107.691 )
shape = SubResource( 1 )

[node name="AnimeMove" type="AnimationPlayer" parent="Chunk0x0/Hero"]
anims/down_stand = SubResource( 2 )
anims/down_walk = SubResource( 3 )
anims/left_stand = SubResource( 4 )
anims/left_walk = SubResource( 5 )
anims/right_stand = SubResource( 6 )
anims/right_walk = SubResource( 7 )
anims/up_stand = SubResource( 8 )
anims/up_walk = SubResource( 9 )

[node name="Camera" type="Camera2D" parent="Chunk0x0/Hero"]
position = Vector2( 179.431, 109.249 )
current = true
limit_left = 0
limit_top = 0
limit_right = 576
limit_bottom = 576
script = ExtResource( 5 )

[node name="SwitchTimer" type="Timer" parent="Chunk0x0/Hero"]
wait_time = 0.5
one_shot = true
[connection signal="timeout" from="Chunk0x0/Hero/SwitchTimer" to="Chunk0x0/Hero" method="_on_SwitchTimer_timeout"]
